# speech-vad-demo

./: CMakeLists.txt  main.c
src/: common.h  split.c
